reworded Cr intro  to be more clear about the dynamics etc

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -1,6 +1,6 @@
-\chapter{Coupling between spin and lattice in Chromium \label{ch:CrSDW}}
+\chapter{Coupling between spin and lattice in chromium \label{ch:CrSDW}}
 \section{Introduction}
-In all previous Chapters, we discussed situations for which the order parameters were static, or at least at instantaneous equilibrium.
+In all previous chapters, we discussed situations for which the order parameters were static, or at least at instantaneous equilibrium.
 For GeTe, the polarization and resulting spin splitting were fixed.
 Even though the thermal excitation of polar phonons can lead to a non-trivial dynamical splitting in the band structure, on the slower phonon timescale electrons can still be assumed to be at the instantaneous equilibrium with the ionic potential \cite{Monserrat2017}.
 This is because, as alluded to before, the electronic dynamics is generally many orders of magnitude faster than the atomic ones, meaning that the Born-Oppenheimer approximation remains valid.
@@ -11,15 +11,17 @@ This allows for further research into the dynamics of these effects since they a
 
 New physics arises, however, when two orders with different timescales for their dynamics are coupled.
 Especially when a slave order parameter has slower dynamics than the primary one can interesting effects arise.
-This is the case in the material we study here, Chromium, an itinerant antiferromagnetic metal \cite{Kulikov1984,Fawcett1988}.
-It is the hallmark example of a material where a spin density wave (SDW) develops due to local repulsive interactions of the electron gas, combined with a nesting of the Fermi surface.
-Due to exchange striction, this SDW then causes a periodic lattice distortion (PLD), decreasing the bond lengths of the nearest neighbors with large spin magnitudes, while a tensile strain is induced near the SDW nodes where the neighboring spins are small. 
-The SDW thermalizes on very short timescales (below 100 fs), since it is constituted by electrons \cite{Nicholson2016}.
+This is the case in the material we study here, chromium, an itinerant antiferromagnetic metal \cite{Kulikov1984,Fawcett1988}.
+It is the hallmark example of a material that exhibits a spin density wave (SDW) as a result of local repulsive interactions of the electron gas, combined with a nesting of the Fermi surface.
+Due to exchange striction, this SDW creates an associated periodic lattice distortion (PLD), i.e. a decrease in the bond lengths between nearest neighbors with large spin magnitudes, while a tensile strain is present near the SDW nodes where the neighboring spins are small. 
+% The SDW thermalizes on very short timescales (below 100 fs), since it is constituted by electrons \cite{Nicholson2016}.
+The magnitude of the SDW can be diminished through excitation with optical pulses which heat up the electron gas of which it is constituted.
+The dynamics of the order parameter that describes the SDW is extremely fast (with a fs characteristic timescale), meaning that it responds very quickly to the pulses.
 The dynamics of the PLD is instead related to the motion of massive ions and is therefore much slower, with generally a ps characteristic timescale.
-The system as a whole only reaches full equilibrium with the substrate after nanoseconds \cite{Singer2015prb}. 
+% The system as a whole only reaches full equilibrium with the substrate after nanoseconds \cite{Singer2015prb}. 
 By using ultrafast pump-probe experiments that have a sub-picosecond resolution, these PLD dynamics can be studied and, more importantly, controlled very precisely through excitation of the much faster responding SDW.
 
-In this Chapter we explore and investigate the additional possibilities opened up by applying a sequence of optical excitations spaced at various points in time.
+In this chapter we explore and investigate the additional possibilities opened up by applying a sequence of optical excitations spaced at various points in time.
 We start by demonstrating the experimental observations made by applying not one, but two optical pulses to the SDW, and how their spacing changes drastically the response of the probed PLD.
 This showcases the additional complexity and control achieved over the standard single pump-probe experiments that were performed previously \cite{Singer2015prb, Singer2015prb}. 
 Among various possibilities, this additional control allows for the suppression of the intermediate nonequilibrium state thus reproducing adiabatic transitions on much faster timescales than would be possible without this control, which is termed ``shortcuts to adiabaticity'' in quantum technology \cite{Torrontegui2013,Deffner2014,Zhou2017}.
@@ -35,10 +37,10 @@ The experimental procedure is depicted schematically in Fig.~\ref{fig:Cr_schemat
 \caption{\label{fig:Cr_schematic}{\bf Experimental methods} a) Schematic of the experimental setup where two optical pump pulses are applied to the SDW at $t=\tau_1,\tau_2$, leading to an oscillation of the PLD which is probed through the XFEL. The heat from the pulses is subsequently transferred from the SDW to the heat bath, cooling down the SDW. b) Pictorial representation and experimental measurement of the Bragg peaks and Laue fringes associated with the thin film and PLD, probed by the XFEL.}
 \end{figure}
 The film was illuminated by two sequential 40 fs optical pulses at times $\tau_1$ and $\tau_2$, heating up the electronic subsystem and, consequently, the SDW.
-The film thickness was chosen to be smaller than the optical skin-depth of Cr, meaning that the pulses excite the entire volume of the sample homogeneously.
-\\\\
+The film thickness was chosen to be smaller than the optical skin depth of Cr, meaning that the pulses excite the entire volume of the sample homogeneously.
+
 The PLD is pinned by the boundary conditions of the thin film, enforcing a half-integer number of periods along the depth of our sample.
-Since the PLD describes displacements of the Cr ions, its amplitude can be directly probed by measuring the intensity of the corresponding Laue fringe with an X-Ray Free-Electron Laser (XFEL), \cite{Singer2015prb, Singer2015prl}, as shown in Fig.~\ref{fig:Cr_schematic}(b).
+Since the PLD describes displacements of the Cr ions, its amplitude can be directly probed by measuring the intensity of the corresponding Laue fringe with an x-ray free-electron laser (XFEL), \cite{Singer2015prb, Singer2015prl}, as shown in Fig.~\ref{fig:Cr_schematic}(b).
 The high peak selectivity that is achievable by XFELs allows us to resolve very narrow Bragg peaks or Laue fringes. 
 This in turn makes accurate measurements on thin films accessible, even if they are deposited on thick substrates whose Bragg peaks would normally overpower the thin film signatures.
 The scattering intensity of the fringe associated with the PLD is highlighted by the red box in Fig.~\ref{fig:Cr_schematic}(b).
@@ -57,7 +59,7 @@ It is important to realize that the SDW order is not directly accessible through
 \IncludeGraphics[width=0.78\textwidth]{experimental2}
 \caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of the second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
 \end{figure}
-\\\\
+
 We can observe that the PLD has an oscillation time period of approximately 450 fs, and a damping time of around 3 ps.
 In panel (a) of Fig.~\ref{fig:Cr_experimental1}, the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period indicates the fast restoration of the oscillation equilibrium. 
 This means that the heat transfer rate between the electrons that constitute the SDW and the bath is relatively high, leading to a thermalization between the two within a picosecond after heating.
@@ -65,23 +67,23 @@ This partially restores the SDW which in turn leads to the partial restoration o
 Further thermalization between the Cr lattice and the substrate occurs on a nanosecond timescale, beyond the scope of these experiments.
 Furthermore, we find that the system as a whole (bath and electrons) heats by approximately 45 K as a result of the pulses, which is reflected in the diminished final amplitude of the PLD.
 However, since this amplitude is nonzero, we can deduce that the final temperature of the system is below the N\'eel temperature of the SDW.
-\\\\
+
 The most interesting observation is that, by changing the timing of the second pulse $\tau_2$, the dynamics of the PLD can be controlled to a high degree, as demonstrated in Fig.~\ref{fig:Cr_experimental1}(a).
 It is possible to fully quench the oscillation of the PLD, or its amplitude can instead be increased by the second pulse.
 The horizontal bands display periodically alternating regions of these two behaviors, termed as ``destructive'' and ``constructive'' interference.
 Two representative horizontal slices are taken and displayed in Fig.~\ref{fig:Cr_experimental1}(b,c), demonstrating destructive and constructive interference, respectively. 
-\\\\
+
 The maximum PLD amplitude that is reached after the second pulse is 150\% of the original value.
 This is significantly higher than the excitation amplitudes associated with the conventional displacive excitation mechanism, which leads to a ratio of around one \cite{Singer2015prl,Zeiger1992}. 
 Furthermore, if the second pulse arrives before the SDW had time to cool down, a smaller maximum oscillation amplitude is achieved, as can be seen from the horizontal band around $\tau_2 - \tau_1 = 0$ ps, and highlighted by the green box, in Fig.~\ref{fig:Cr_experimental1}(a).
 As will be further discussed below, this indicates that the combined fluence of the two pulses was high enough to raise the temperature of the SDW above $T_N$.
-\\\\
+
 The influence of the pulse's fluence is detailed in Fig.~\ref{fig:Cr_experimental2}.
 Experiments performed with a high fluence initial pulse, cause the SDW to heat up and remain above $T_N$ for the entirety of the experiment, demonstrating that the impact of the second pulse, in this case, is completely lost. Indeed, varying its timing changes nothing to the oscillation of the PLD, as can be seen from Fig.~\ref{fig:Cr_experimental2}(c).
 If control is the goal, it is thus important that the SDW is allowed to cool down below $T_N$ before exciting it again.
 The SDW order parameter, furthermore, depends strongest on temperature when it is close to the critical point where it varies as the square root, thus increasing the pulse efficiency in that temperature region.
-These considerations will be discussed in greater detail in Section~\ref{sec:Cr_results}, after the theoretical description is given.
-\\\\
+These considerations will be discussed in greater detail in section~\ref{sec:Cr_results}, after the theoretical description is given.
+
 Finally, the measurements demonstrate an absence of topological defects since the satellite fringe associated with the PLD (Fig.~\ref{fig:Cr_schematic}(b)) does not widen compared to the peak associated with the sample itself.
 This supports our previous claim that the optical pulses excite the thin film homogeneously. 
 \section{Theory \label{sec:Cr_model}}
@@ -110,7 +112,7 @@ In this case, we exclude the mode that describes the PLD oscillation, since it i
 Similar to the electrons, the phonon bath harbors strong interactions within itself allowing us to assign a second temperature $T_b$ to it.
 The interaction between the electrons at $T_L$ and the bath at $T_b$ is what leads to the heat transfer between them, resulting in equilibration between the two subsystems within 1 ps.
 We thus assume that the PLD mode is completely detached from the other phonons, instead only interacting strongly with the SDW order parameter $L$ (see below). 
-\\\\
+
 The evolution of the temperatures can be described by the so-called two temperature model:
 \begin{align}
 	\label{eq:Cr_twotemp}
@@ -119,9 +121,9 @@ The evolution of the temperatures can be described by the so-called two temperat
 \end{align}
 with $k$ the heat transfer rate, and $C_L$, $C_b$ the heat capacities of the electronic degrees of freedom and of the bath, respectively.
 The dots signify time derivatives.
-As one could expect, we find that the heat capacity of the bath is larger than that of the electronic system by an order of magnitude, as will be confirmed when we detail the model parameters in the Methods Section~\ref{sec:Cr_Methods}.
+As one could expect, we find that the heat capacity of the bath is larger than that of the electronic system by an order of magnitude, as will be confirmed when we detail the model parameters in the Methods section~\ref{sec:Cr_Methods}.
 Finally, the heat injected by the pulses is modeled by a Gaussian $Q_{ph}(t) = A e^{\frac{-(t - \tau)^2}{\xi^2}}$, with $A$ the strength, $\xi$ the duration and $\tau$ the time delay.
-\\\\
+
 The changes to $T_L$ through heating and subsequent cooling affects the SDW amplitude $L$ and indirectly the PLD one $y$, as described by a Landau-type theory~\cite{Khomskii2010}.
 These order parameters are related to the Fourier component of the SDW with wavevector $q$, i.e. $L = S_q$, and to the acoustic phonon amplitude $y = u_{2q}$.
 The phonon mode is the second harmonic ($2q$) of the SDW because the exchange striction only acts on the magnitude of the spins, not on the phase so that during one period of the SDW oscillation two periods of the PLD occur.
@@ -170,23 +172,23 @@ One obvious remark can be made here: to be completely exact, the energy dissipat
 However, the case can be made that since this is only a single mode, its contribution to the heating of the bath will be negligible compared with the one as a result of the thermalization with the electronic degrees of freedom.
 
 \section{Methods \label{sec:Cr_Methods}}
-To solve the time evolution of $L$ and $y$ through the differential equations in Eqs.~\ref{eq:Cr_euler_lagrange}, we used the numerical integration methods implemented in the \href{https://github.com/SciML/DifferentialEquations.jl}{DifferentialEquations.jl} package~\cite{rackauckas2017differentialequations}. More specifically, the Tsit5 algorithm was used, which has adaptive time-stepping to capture the sharp optical pulses.
+To solve the time evolution of $L$ and $y$ through the differential equations in Eqs.~\ref{eq:Cr_euler_lagrange}, we used the numerical integration methods implemented in the \href{https://github.com/SciML/DifferentialEquations.jl}{DifferentialEquations.jl} package~\cite{rackauckas2017differentialequations}. More specifically, the Tsit5 algorithm was used, which has adaptive time stepping to capture the sharp optical pulses.
 Originally, the dynamics were fully solved both for $L$ and $y$, but it was confirmed during the fitting process that the dynamics of $L$ are indeed significantly faster than those of $y$.
 Solving dynamics with significantly different timescales is in general hard from the numerical point of view, meaning that taking $L$ to be always at the minimum of the potential makes solving the equations numerically much easier.
 The starting temperature of the bath was fixed at 115 K in all simulations, and the thin film value of $T_N$ was taken, i.e. 290 K which is slightly lower than the bulk Cr Ne\'el temperature of $\sim$ 308 K.
-\\\\
+
 Most parameters of the model were not perfectly known a priori and thus had to be fitted to the experimental measurements.
 To aid with the fitting, judicious choices for the starting values of some parameters were be made.
 For example, it was known that the optical pulse width $\tau$ was around 40 fs, and that the oscillation frequency of the PLD $\omega_0 \approx$ 14 THz or equivalently had a period of around 450 fs.
 Furthermore, from previous experiments, the ratio between the heat capacities for the bath and electronic degrees of freedom, $\frac{c_b}{c_L}$, was determined to be around 7 \cite{Nicholson2016}, and the heat transfer rate around 42 $\times$ 10$^{16}$ W/m$^3$ K \cite{Hostetler1999}.
-\\\\
+
 The time evolution of the system was then solved for each set of trial parameters on an interval from -2 ps to 8 ps, where the lower bound is chosen so that the numerical integration starts from a complete equilibrium initial condition.
 This is necessary because when the sharp pulse arrives at 0 ps, some energy already enters the system slightly before 0 ps due to the Gaussian shape.
 The error of the solution $\tilde{x}$ w.r.t. the experimental measurements $x$ is then estimated as the mean square sum $err = \sum_{i=1}^n \frac{(x_i - \tilde{x}_i)^2}{n}$, where $i$ denote the indices of the measurement points.
 The numerical optimization was done through the \href{https://github.com/JuliaNLSolvers/Optim.jl}{Optim.jl} package ~\cite{mogensen2018optim}, where we found that the Nelder-Mead simplex algorithm \cite{Nelder1965} works best for this very non-linear problem.
 
-\section{Results and Discussion \label{sec:Cr_results}}
-The experimental measurements we use as a basis to fit our model were discussed in Section~\ref{sec:Cr_experiment}, and shown in Fig.~\ref{fig:Cr_experimental1}.
+\section{Results and discussion \label{sec:Cr_results}}
+The experimental measurements we use as a basis to fit our model were discussed in section~\ref{sec:Cr_experiment}, and shown in Fig.~\ref{fig:Cr_experimental1}.
 We took eleven representative experiments, which can be thought of as horizontal slices of Fig.~\ref{fig:Cr_experimental1}(a), in order to fit the model parameters to get the best total fit across all datasets, allowing only the pulse fluence to fluctuate between sets.
 
 The parameters that were thus found are
@@ -206,13 +208,13 @@ The results of this fitting procedure is shown in Fig.~\ref{fig:Cr_theoretical_f
 	\IncludeGraphics[width=0.9\textwidth]{L_y_energy.png}
 	\caption{\label{fig:Cr_energy_surfaces}{\bf Time evolution of the energy surfaces of $L$ and $y$.} The trajectory of each order parameter is indicated by the black graph. The energy surface in panel a (b) is calculated by varying L (y) at each time step, while keeping y (L) at the value corresponding to the trajectory in panel b (a). The fast dynamics of L is reflected by the trajectory tracking its minimum at all times.}
 \end{figure}
-\\\\
+
 To get a deeper understanding of the underlying effect, we look at the evolution of the free energy surfaces for both order parameters, shown in Fig.~\ref{fig:Cr_energy_surfaces}.
 The characteristic double-well potential for $L\neq0$  is clearly visible throughout the simulation.
 As expected, we can observe that, when the pulses hit and $T_L$ rapidly increases, the potential for $L$ varies as rapidly, leading in turn to a quick shift of the minimum of the single well potential for $y$, which ultimately results in an oscillation of $y$ due to its relatively slow dynamics.
 While the temperature $T_L$ decreases again, $L$, and consequently the minimum of the potential for $y$, shift back towards their original equilibrium position.
 However, the oscillation of $y$ remains for quite a long time during this shift, since the damping is not particularly large (of the order of 4 ps) compared with the cooling rate of the SDW ($T_L$).
-\\\\
+
 This already presents us with the first hint at the benefit of indirectly exciting the PLD through the SDW, which we clarify through the use of a thought experiment of a hypothetical system for which the PLD is the primary order parameter with associated double-well potential, and with no other coupled order parameters.
 The only possibility to excite an oscillation, in this case, is by heating up the system above the critical temperature.
 This would change the shape of the hypothetical energy potential, shifting its minimum to 0, and again, due to the slow dynamics, an oscillation would occur.
@@ -221,14 +223,14 @@ However, as with any normal oscillator, the value of the PLD would never exceed 
 Here, however, due to the relatively fast thermalization of the SDW with the bath, the potential surface for $y$ recovers on a faster timescale than it would on its own, leading to a relative movement of the potential opposite to the movement of $y$ itself.
 This relative movement transfers additional momentum to $y$ as the SDW is cooling down, and the potential is being restored, leading ultimately to a higher oscillation amplitude, even when only a single pulse is applied.
 This was observed experimentally in previous measurements by A. Singer's group and reported in Ref.~\cite{Singer2015prl}. 
-\\\\
+
 We want to reiterate that, since it is the magnitude of $L$ which is the driver of the energy surface of $y$, the effect is most pronounced when $L$ is close to $T_N$ because a small change in temperature causes a large variation of the equilibrium position of $L$ as shown by the square root temperature dependence in Eq.~\eqref{eq:Cr_L0}.    
-\\\\
+
 Having multiple such pulses that can rapidly change the potential surface for $y$ opens up many additional possibilities, allowing for constructive interference (Fig.~\ref{fig:Cr_theoretical_fit}(a-b)) or, by shifting the potential surface in the same direction as the movement of $y$, for a complete destructive interference (see Fig.~\ref{fig:Cr_theoretical_fit}(c-d)).
-\\\\
+
 This behavior can be leveraged further by applying a train of pulses, for which we now investigate exactly what can be achieved.
 Two goals will be investigated: maximizing the oscillation amplitude, and designing the pulse train so that the envelope of the oscillation perfectly tracks a given signal function. 
-\\\\
+
 % First we discuss the strategy to achieve maximal amplitude.
 The maximal change in the value of $L$, and thus the potential surface for $y$, can be achieved by heating it all the way to $T_N$.
 It is then important to keep this initial shift of the potential for $y$ in place until $y$ crosses the minimum, converting as much potential energy into kinetic energy.
@@ -242,7 +244,7 @@ From our simulations, unless the damping is really negligible, it is always most
 The results in Fig.~\ref{fig:Cr_control}(a,b) demonstrate this. In panel (a) a pulse was applied at each  period, whereas in (b) every other period. 
 We artificially increased the heat capacity of the bath to infinity to mimic a possible strongly cooled regime, which would be ideal for maximizing the oscillation amplitude.
 With the damping rate of $y$ taken as the one fitted to the experiment, the maximal amplitude thus achieved is about 450\% the original value, quite a remarkable increase.  
-\\\\
+
 \begin{figure}
 	\IncludeGraphics[width=0.9\textwidth]{envelope.png}
 	\caption{\label{fig:Cr_control} {\bf Pulse train design.} a), b) Two possible schemes to maximize the oscillation amplitude. In (a) pulses were applied each period, whereas in (b) only every other period. c), d) Two examples of perfect control. In (c) the envelope was taken as one period of a sinusoid followed by a sawtooth with the same width and height. In (d) the envelope consists of a Gaussian followed by an exponential and inverse exponential.}
@@ -268,15 +270,15 @@ Moreover, through the use of prisms, a high fluence pulse can be split into many
 This is all to say that technically speaking such pulse trains can be generated, and we are hopeful that such experiments can be performed in the future.
 
 \section{Conclusions}
-In this Chapter, we discussed the effects of cross-order coupling beyond quasi-static phenomena.
-The results show that the coupling between the SDW and PLD through exchange striction in Chromium is another prime example of cross-order control, where, in this case, the perturbation applied by optical pulses to the SDW leads to an excitation of the PLD mode.
+In this chapter, we discussed the effects of cross-order coupling beyond quasi-static phenomena.
+The results show that the coupling between the SDW and PLD through exchange striction in chromium is another prime example of cross-order control, where, in this case, the perturbation applied by optical pulses to the SDW leads to an excitation of the PLD mode.
 Moreover, the slower dynamics of the PLD compared to the SDW opens up new behavior and additional dynamical control that would not be possible without the coupling.
 If the PLD would have dynamics on the same timescale as the SDW, changing its potential through exciting the latter would not be very impactful since it would follow the minimum of the potential as fast as the excited SDW would change it.
-\\\\
+
 Through the use of a relatively simple model, we were able to reproduce the experimental observations to an incredible degree, as demonstrated by the quality of the fits in Fig.~\ref{fig:Cr_theoretical_fit}.
 Together with the remarkable indirect control through the SDW, this model allowed us to design a train of pulses in order to either maximize the PLD oscillation amplitude (up to 450\%), or even make it follow a give envelope function (see Fig.~\ref{fig:Cr_control}).
 The control also allows for the destruction of the PLD oscillation at a moment's notice, leading to a possible shortcut to adiabaticity where the final state is at a higher temperature than the original one.
-\\\\
+
 Such control would not have been possible through the direct excitation of the PLD mode and is thus another clear demonstration of the many benefits that coupled orders might present.
 Whether this can be directly exploited for technological means remains a question, seen as XFELs are rather large.
 However, this behavior through coupled order parameters may be a promising route to robust coherent control.
