--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -183,8 +183,8 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 % \Include{Introduction}
 
 % \Include{Rashba}
-\Include{GdMn2O5}
-% \Include{Cr}
+% \Include{GdMn2O5}
+\Include{Cr}
 
 % \Include{Softening}
 % \appendix
